# ComfyUI-nunchaku

./: .gitignore  .pre-commit-config.yaml  README.md  README_ZH  README_ZH.md  __init__.py  model_patcher.py  pyproject.toml  requirements-pulid.txt  requirements.txt  utils.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml
.github/workflows/: auto-merge-main-into-dev.yaml  auto-merge-main-into-dev.yml  build-comfyui-desktop.yaml  build-docs.yaml  build_comfyui_desktop.cmd  close-inactive-issues.yaml  close_inactive_issues.yaml  lint.yaml  merge-main-into-dev.yaml  pr-test.yaml  publish.yaml  reopen-issues.yaml  test-ampere.yaml  test-blackwell.yaml  test_ampere.yaml  test_blackwell.yaml  update-version-file.yaml
docs/source/: conf.py  index.rst
example_workflows/: install_wheel.json  merge_safetensors.json  nunchaku-flux.1-canny-lora.json  nunchaku-flux.1-canny.json  nunchaku-flux.1-depth-lora.json  nunchaku-flux.1-depth.json  nunchaku-flux.1-dev-controlnet-union-pro.json  nunchaku-flux.1-dev-controlnet-union-pro2.json  nunchaku-flux.1-dev-pulid.json  nunchaku-flux.1-dev-qencoder.json  nunchaku-flux.1-fill-removalV2.json  nunchaku-flux.1-fill.json  nunchaku-flux.1-ip-adapter.json  nunchaku-flux.1-kontext-dev-turbo_lora.json  nunchaku-flux.1-kontext-dev.json  nunchaku-flux.1-redux-dev.json  nunchaku-flux.1-schnell.json  nunchaku-qwen-image-edit-2509-lightning.json  nunchaku-qwen-image-edit.json
mixins/: model.py
model_base/: __init__.py  qwenimage.py
model_configs/: qwenimage.py
models/: qwenimage.py
nodes/: utils.py
nodes/lora/: __init__.py  flux.py
nodes/models/: __init__.py  export_json.py  flux.py  ipadapter.py  pulid.py  qwenimage.py  text_encoder.py  utils.py
nodes/preprocessors/: __init__.py  depth.py
nodes/tools/: __init__.py  installers.py  merge_safetensors.py
pypi/: nunchaku_index.html
scripts/: README.md  build_comfyui_desktop.cmd  download_inputs.py  download_models.py  download_test_data.py  parse_object_invs.py  setup_custom_nodes.py  update_versions.py
test_data/: custom_nodes.yaml  images.yaml  inputs.yaml  loras.yaml  models.yaml
test_data/dependencies/: comfyui_controlnet_aux.txt
tests/: case.py  requirements.txt  test_legacy_workflows.py  test_workflows.py  utils.py
tests/legacy_scripts/: nunchaku-flux1-canny-lora.py  nunchaku-flux1-depth-lora.py  nunchaku-flux1-fill-removalV2.py  nunchaku-flux1-redux-dev.py  nunchaku-flux1-schnell.py  nunchaku_flux1_canny.py  nunchaku_flux1_dev.py  nunchaku_flux1_fill.py  nunchaku_flux1_shuttle_jaguar.py
tests/scripts/: nunchaku-flux1-canny-lora.py  nunchaku-flux1-canny.py  nunchaku-flux1-depth-lora.py  nunchaku-flux1-dev-controlnet_upscaler.py  nunchaku-flux1-dev-hand_drawn_game.py  nunchaku-flux1-dev-pulid.py  nunchaku-flux1-dev-qencoder.py  nunchaku-flux1-fill-removalV2.py  nunchaku-flux1-ip-adapter.py  nunchaku-flux1-kontext-dev-turbo_lora.py  nunchaku-flux1-kontext-dev.py  nunchaku_flux1_canny.py  nunchaku_flux1_canny_lora.py  nunchaku_flux1_depth.py  nunchaku_flux1_dev.py  (+7 more)
workflows/: nunchaku-flux.1-canny-lora.json  nunchaku-flux.1-canny.json  nunchaku-flux.1-depth-lora.json  nunchaku-flux.1-depth.json  nunchaku-flux.1-dev-controlnet-union-pro.json  nunchaku-flux.1-dev-controlnet-upscaler.json  nunchaku-flux.1-dev.json  nunchaku-flux.1-fill.json  nunchaku-flux.1-redux-dev.json  nunchaku-flux.1-schnell.json  svdq-flux.1-depth.json  svdq-flux.1-dev.json  svdq-flux.1-schnell.json
wrappers/: flux.py
(+130 files in other folders)
