[tool.isort]
profile = "black"
known_first_party = ["nunchaku"]
line_length = 120

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"tests/scripts/*.py" = ["E402"]
"tests/legacy_scripts/*.py" = ["E402"]
"__init__.py" = ["E402"]

[project]
name = "ComfyUI-nunchaku"
description = "Nunchaku ComfyUI Node. Nunchaku is a high-performance inference engine optimized for low-bit neural networks. See more details: https://github.com/mit-han-lab/nunchaku"
version = "0.3.3"
license = { file = "LICENSE.txt" }
dependencies = []
requires-python = ">=3.10, <3.13"

[project.urls]
Repository = "https://github.com/mit-han-lab/ComfyUI-nunchaku"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lmxyy1999"
DisplayName = "ComfyUI-nunchaku"
Icon = "https://raw.githubusercontent.com/mit-han-lab/nunchaku/96615bd93a1f0d2cf98039fddecfec43ce34cc96/assets/nunchaku.svg"
