[tool.isort]
profile = "black"
known_first_party = ["nunchaku"]
line_length = 120

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"tests/scripts/*.py" = ["E402"]
"tests/legacy_scripts/*.py" = ["E402"]
"__init__.py" = ["E402"]

[project]
name = "ComfyUI-nunchaku"
description = "Nunchaku ComfyUI Node. Nunchaku is a high-performance inference engine optimized for low-bit neural networks. See more details: https://github.com/nunchaku-tech/nunchaku"
version = "1.0.1"
license = { file = "LICENCE.txt" }
requires-python = ">=3.10, <3.13"

[project.urls]
Repository = "https://github.com/nunchaku-tech/ComfyUI-nunchaku"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lmxyy1999"
DisplayName = "ComfyUI-nunchaku"
Icon = "https://raw.githubusercontent.com/nunchaku-tech/nunchaku/96615bd93a1f0d2cf98039fddecfec43ce34cc96/assets/nunchaku.svg"

[tool.doc8]
max-line-length = 120
ignore-path = ["docs/_build"]
ignore = ["D000", "D001"]

[tool.rstcheck]
ignore_directives = ["tabs"]
ignore_messages = ["ERROR/3", "INFO/1"]
